--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mate Blog - Start</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="logo">
+        <h1 class="logo-text"><span>mateBlog</span></h1>
+      </div>
+    </header>
+  </body>
 </html>
