--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -10,6 +10,9 @@
       <div class="logo">
         <h1 class="logo-text"><span>mateBlog</span></h1>
       </div>
+      <ul class="nav">
+        <li><a href="#">Home</a></li>
+      </ul>
     </header>
   </body>
 </html>
