--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -12,6 +12,8 @@
       </div>
       <ul class="nav">
         <li><a href="#">Home</a></li>
+        <li><a href="#">Acerca de..</a></li>
+        <li><a href="#">Contacto</a></li>
       </ul>
     </header>
   </body>
