--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta links -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/b3353cf930.js" crossorigin="anonymous"></script>
+
+    <!-- Custom Styling -->
+    <link rel="stylesheet" href="./css/style.css">
+
     <title>Mate Blog - Start</title>
   </head>
   <body>
@@ -10,6 +18,7 @@
       <div class="logo">
         <h1 class="logo-text"><span>mateBlog</span></h1>
       </div>
+      <i class="fa fa-bars menu-toggle"></i>
       <ul class="nav">
         <li><a href="#">Home</a></li>
         <li><a href="#">Acerca de..</a></li>
