--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="logo">
-        <h1 class="logo-text"><span>mateBlog</span></h1>
+        <h1 class="logo-text"><span>mate</span>Blog</span></h1>
       </div>
       <i class="fa fa-bars menu-toggle"></i>
       <ul class="nav">
