--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -21,7 +21,7 @@
       <i class="fa fa-bars menu-toggle"></i>
       <ul class="nav">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Acerca de..</a></li>
+        <li><a href="#">Acerca</a></li>
         <li><a href="#">Contacto</a></li>
       </ul>
     </header>
