--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -23,6 +23,8 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Acerca</a></li>
         <li><a href="#">Contacto</a></li>
+        <li><a href="#">Registrate</a></li>
+        <li><a href="#">Login</a></li>
       </ul>
     </header>
   </body>
