--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -25,6 +25,13 @@
         <li><a href="#">Contacto</a></li>
         <!--<li><a href="#">Registrate</a></li>
         <li><a href="#">Login</a></li>-->
+        <li>
+          <a href="#">Users</a>
+          <ul>
+            <li><a href="#">Dashboard</a></li>
+            <li><a href="#" class="logout">Logout</a></li>
+          </ul>
+        </li>
       </ul>
     </header>
   </body>
