--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -26,7 +26,9 @@
         <!--<li><a href="#">Registrate</a></li>
         <li><a href="#">Login</a></li>-->
         <li>
-          <a href="#">Users</a>
+          <a href="#">
+            <i class="fa fa-user"></i>
+          </a>
           <ul>
             <li><a href="#">Dashboard</a></li>
             <li><a href="#" class="logout">Logout</a></li>
