--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -28,6 +28,8 @@
         <li>
           <a href="#">
             <i class="fa fa-user"></i>
+            Users
+            <i class="fa fa-chevron-down"></i>
           </a>
           <ul>
             <li><a href="#">Dashboard</a></li>
