--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -44,5 +44,8 @@
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" 
     crossorigin="anonymous"></script>
 
+    <!-- Custom Script -->
+    <script src="./js/script.js"></script>
+
   </body>
 </html>
