--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -39,13 +39,15 @@
       </ul>
     </header>
 
-    <!-- Carrousel slider -->
+    <!-- Page Wrapper for the whole website -->
     <div class="page-wrapper">
+
+      <!-- Post slider -->
 
     </div>
 
     <!-- ================== SCRIPTS ================== -->
-    
+
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" 
     integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" 
