--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -43,8 +43,11 @@
     <div class="page-wrapper">
 
       <!-- Post slider -->
+      
+      <!-- End Post slider-->
 
     </div>
+    <!-- End Page Wrapper -->
 
     <!-- ================== SCRIPTS ================== -->
 
