--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -71,7 +71,7 @@
     <script src="./js/script.js"></script>
 
     <!-- Slick slider -->
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
   </body>
 </html>
