--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -56,7 +56,7 @@
                 <h4><a href="single.html">Test title for a trending post</a></h4>
                 <i class="fa fa-user">Juan P. Romano</i>
                 &nbsp;
-                <i class="fa fa-calendar"></i>
+                <i class="fa fa-calendar">Wed 6, Apr 2021</i>
               </div>
             </div>
           </div>
