--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -106,6 +106,12 @@
       </div>
       <!-- End Post slider-->
 
+      <!-- Content section -->
+      <div class="content">
+        
+      </div>
+      <!-- End content section -->
+
     </div>
     <!-- End Page Wrapper -->
 
