--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -108,7 +108,9 @@
 
       <!-- Content section -->
       <div class="content">
-        
+        <div class="main-content">
+          <h1 class="recent-post-title">Recent Posts</h1>
+        </div>
       </div>
       <!-- End content section -->
 
