Main content section

--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -108,10 +108,15 @@
 
       <!-- Content section -->
       <div class="content">
+        
         <div class="main-content">
           <h1 class="recent-post-title">Recent Posts</h1>
         </div>
+      
+        <div class="sidebar"></div>
+
       </div>
+
       <!-- End content section -->
 
     </div>
