Main content section

--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -107,7 +107,7 @@
       <!-- End Post slider-->
 
       <!-- Content section -->
-      <div class="content">
+      <div class="content clearfix">
         
         <div class="main-content">
           <h1 class="recent-post-title">Recent Posts</h1>
