--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -57,7 +57,7 @@
                 <h2><a href="single.html">Test title for a trending post</a></h2>
                 <i class="fa fa-user"><span> </span> Juan P. Romano</i>
                 &nbsp;
-                <i class="fa fa-calendar"><span> </span> Wed 6, Apr 2021</i>
+                <i class="fa fa-calendar"><span> </span> Apr 06, 2021</i>
               </div>
             </div>
 
@@ -67,7 +67,7 @@
                 <h2><a href="single.html">Test title for a trending post</a></h2>
                 <i class="fa fa-user"><span> </span> Juan P. Romano</i>
                 &nbsp;
-                <i class="fa fa-calendar"><span> </span> Wed 6, Apr 2021</i>
+                <i class="fa fa-calendar"><span> </span> Apr 06, 2021</i>
               </div>
             </div>
 
@@ -77,7 +77,7 @@
                 <h2><a href="single.html">Test title for a trending post</a></h2>
                 <i class="fa fa-user"><span> </span> Juan P. Romano</i>
                 &nbsp;
-                <i class="fa fa-calendar"><span> </span> Wed 6, Apr 2021</i>
+                <i class="fa fa-calendar"><span> </span> Apr 06, 2021</i>
               </div>
             </div>
 
@@ -87,7 +87,7 @@
                 <h2><a href="single.html">Test title for a trending post</a></h2>
                 <i class="fa fa-user"><span> </span> Juan P. Romano</i>
                 &nbsp;
-                <i class="fa fa-calendar"><span> </span> Wed 6, Apr 2021</i>
+                <i class="fa fa-calendar"><span> </span> Apr 06, 2021</i>
               </div>
             </div>
 
@@ -97,7 +97,7 @@
                 <h2><a href="single.html">Test title for a trending post</a></h2>
                 <i class="fa fa-user"><span> </span> Juan P. Romano</i>
                 &nbsp;
-                <i class="fa fa-calendar"><span> </span> Wed 6, Apr 2021</i>
+                <i class="fa fa-calendar"><span> </span> Apr 06, 2021</i>
               </div>
             </div>
 
@@ -119,7 +119,7 @@
               <h1><a href="single.html">Another test title for the barebones blog</a></h1>
               <i class="fa fa-user"> Juan P. Romano</i>
               &nbsp;
-              <i class="fa fa-calendar"></i>
+              <i class="fa fa-calendar">Apr 07, 2021</i>
             </div>
           </div>
 
