Main content section

--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -120,6 +120,9 @@
               <i class="fa fa-user"> Juan P. Romano</i>
               &nbsp;
               <i class="fa fa-calendar">Apr 07, 2021</i>
+              <p class="preview-text">
+                lorem ipsum
+              </p>
             </div>
           </div>
 
