Main content section

--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -121,7 +121,8 @@
               &nbsp;
               <i class="fa fa-calendar">Apr 07, 2021</i>
               <p class="preview-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum ad tempore quia aperiam veritatis iste iusto at odio adipisci expedita quasi nemo, eos, amet omnis quibusdam eaque quisquam nam voluptatibus.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                Earum ad tempore quia aperiam veritatis iste iusto at odio adipisci expedita quasi nemo, eos, amet omnis quibusdam eaque quisquam nam voluptatibus.
               </p>
             </div>
           </div>
