Main content section

--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -124,7 +124,7 @@
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                 Earum ad tempore quia aperiam veritatis iste iusto at odio adipisci expedita quasi nemo, eos, amet omnis quibusdam eaque quisquam nam voluptatibus.
               </p>
-              <a href="single.html">Read More</a>
+              <a href="single.html" class="btn">Read More</a>
             </div>
           </div>
 
