--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -161,7 +161,18 @@
         </div>
         <!--End Main content -->
       
-        <div class="sidebar"></div>
+        <div class="sidebar">
+
+          <div class="section search">
+            <h2 class="section-title">Search</h2>
+            <form action="index.html" method="post">
+              <input type="text" name="search-term" class="text-input" placeholder="Search...">
+            </form>
+          </div>
+
+          <div class="section topics"></div>
+
+        </div>
 
       </div>
 
