--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -171,7 +171,7 @@
           </div>
 
           <div class="section topics"></div>
-
+            <h2 class="section-title">Topics</h2>
         </div>
 
       </div>
