--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -172,6 +172,15 @@
 
           <div class="section topics"></div>
             <h2 class="section-title">Topics</h2>
+            <ul>
+              <li><a href="#">Test topic</a></li>
+              <li><a href="#">Test topic</a></li>
+              <li><a href="#">Test topic</a></li>
+              <li><a href="#">Test topic</a></li>
+              <li><a href="#">Test topic</a></li>
+              <li><a href="#">Test topic</a></li>
+              <li><a href="#">Test topic</a></li>
+            </ul>
         </div>
 
       </div>
