--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -161,6 +161,7 @@
         </div>
         <!--End Main content -->
       
+        <!-- Sidebar section -->
         <div class="sidebar">
 
           <div class="section search">
@@ -182,6 +183,7 @@
               <li><a href="#">Test topic</a></li>
             </ul>
         </div>
+        <!-- End sidebar section -->
 
       </div>
 
