--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -171,7 +171,7 @@
             </form>
           </div>
 
-          <div class="section topics"></div>
+          <div class="section topics">
             <h2 class="section-title">Topics</h2>
             <ul>
               <li><a href="#">Test topic</a></li>
@@ -182,6 +182,7 @@
               <li><a href="#">Test topic</a></li>
               <li><a href="#">Test topic</a></li>
             </ul>
+          </div>
         </div>
         <!-- End sidebar section -->
 
