--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -193,6 +193,10 @@
     </div>
     <!-- End Page Wrapper -->
 
+    <!-- Footer -->
+
+    <!-- End footer -->
+
     <!-- ================== SCRIPTS ================== -->
 
     <!-- JQuery -->
