--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -195,6 +195,11 @@
 
     <!-- Footer -->
 
+    <div class="footer">
+      <div class="footer-content"></div>
+      <div class="footer-bottom"></div>
+    </div>
+
     <!-- End footer -->
 
     <!-- ================== SCRIPTS ================== -->
