--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -197,7 +197,9 @@
 
     <div class="footer">
       <div class="footer-content"></div>
-      <div class="footer-bottom"></div>
+      <div class="footer-bottom">
+        &copy; Matelab 2021
+      </div>
     </div>
 
     <!-- End footer -->
