--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -196,7 +196,12 @@
     <!-- Footer -->
 
     <div class="footer">
-      <div class="footer-content"></div>
+      <div class="footer-content">
+        <div class="footer-section about">
+          
+        </div>
+      </div>
+
       <div class="footer-bottom">
         &copy; Matelab 2021 | Designed & Powered by <a href="https://matelab.com.ar" target="_blank">Matelab</a>
       </div>
