--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -197,9 +197,9 @@
 
     <div class="footer">
       <div class="footer-content">
-        <div class="footer-section about">
-          
-        </div>
+        <div class="footer-section about"></div>
+        <div class="footer-section links"></div>
+        <div class="footer-section contact-form"></div>
       </div>
 
       <div class="footer-bottom">
