--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -197,7 +197,11 @@
 
     <div class="footer">
       <div class="footer-content">
-        <div class="footer-section about"></div>
+        <div class="footer-section about">
+
+          <h1 class="logo-text"><span>mateBlog</span></h1>
+
+        </div>
         <div class="footer-section links"></div>
         <div class="footer-section contact-form"></div>
       </div>
