--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -199,7 +199,10 @@
       <div class="footer-content">
         <div class="footer-section about">
 
-          <h1 class="logo-text"><span>mateBlog</span></h1>
+          <h1 class="logo-text"><span>mate</span>Blog</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam commodi neque repudiandae dolores officia cum quod facere nesciunt tenetur, quam rem vitae tempora sapiente placeat vero. Culpa repellendus aliquam mollitia.
+          </p>
 
         </div>
         <div class="footer-section links"></div>
