--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -203,7 +203,9 @@
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam commodi neque repudiandae dolores officia cum quod facere nesciunt tenetur, quam rem vitae tempora sapiente placeat vero. Culpa repellendus aliquam mollitia.
           </p>
-
+          <div class="contact">
+            <span><i class="fas fa-phone"></i></span>
+          </div>
         </div>
         <div class="footer-section links"></div>
         <div class="footer-section contact-form"></div>
