--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -205,6 +205,7 @@
           </p>
           <div class="contact">
             <span><i class="fas  fa-phone"></i> &nbsp; +54 9 11 2180 5256</span>
+            <span><i class="fas  fa-envelope"></i> &nbsp; <a href="mailto:blog@matelab.com.ar">blog@matelab.com.ar</a></span>
           </div>
         </div>
         <div class="footer-section links"></div>
