--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -204,8 +204,11 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam commodi neque repudiandae dolores officia cum quod facere nesciunt tenetur, quam rem vitae tempora sapiente placeat vero. Culpa repellendus aliquam mollitia.
           </p>
           <div class="contact">
-            <span><i class="fas  fa-phone"></i> &nbsp; +54 9 11 2180 5256</span>
-            <span><i class="fas  fa-envelope"></i> &nbsp; <a href="mailto:blog@matelab.com.ar">blog@matelab.com.ar</a></span>
+            <span><i class="fas fa-phone"></i> &nbsp; +54 9 11 2180 5256</span>
+            <span><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:blog@matelab.com.ar">blog@matelab.com.ar</a></span>
+          </div>
+          <div class="socials">
+            <a href="#"></a>
           </div>
         </div>
         <div class="footer-section links"></div>
