--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -208,7 +208,10 @@
             <span><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:blog@matelab.com.ar">blog@matelab.com.ar</a></span>
           </div>
           <div class="socials">
-            <a href="#"></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
           </div>
         </div>
         <div class="footer-section links"></div>
