--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -210,8 +210,8 @@
           <div class="socials">
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-medium"></i></a>
           </div>
         </div>
         <div class="footer-section links"></div>
