--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -210,6 +210,7 @@
           <div class="socials">
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-medium"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
