--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -218,7 +218,13 @@
             <a href="#"><i class="fab fa-gitlab"></i></a>
           </div>
         </div>
-        <div class="footer-section links"></div>
+        <div class="footer-section links">
+          <h2>Quick Links</h2>
+          <br>
+          <ul>
+            
+          </ul>
+        </div>
         <div class="footer-section contact-form"></div>
       </div>
 
