--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -222,7 +222,12 @@
           <h2>Quick Links</h2>
           <br>
           <ul>
-            
+            <li><a href="#">Test Quick Link</a></li>
+            <li><a href="#">Test Quick Link</a></li>
+            <li><a href="#">Test Quick Link</a></li>
+            <li><a href="#">Test Quick Link</a></li>
+            <li><a href="#">Test Quick Link</a></li>
+            <li><a href="#">Test Quick Link</a></li>
           </ul>
         </div>
         <div class="footer-section contact-form"></div>
