--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -230,7 +230,11 @@
             <li><a href="#">Test Quick Link</a></li>
           </ul>
         </div>
-        <div class="footer-section contact-form"></div>
+        <div class="footer-section contact-form">
+          <h2>Contact us</h2>
+          <br>
+          <form action="index.html" method="post"></form>
+        </div>
       </div>
 
       <div class="footer-bottom">
