--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -233,7 +233,9 @@
         <div class="footer-section contact-form">
           <h2>Contact us</h2>
           <br>
-          <form action="index.html" method="post"></form>
+          <form action="index.html" method="post">
+            <input type="email" name="email" class="text-input">
+          </form>
         </div>
       </div>
 
