--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -234,7 +234,7 @@
           <h2>Contact us</h2>
           <br>
           <form action="index.html" method="post">
-            <input type="email" name="email" class="text-input contact-input" placeholder="Your email address">
+            <input type="email" name="email" class="text-input contact-input" placeholder="Your email address...">
           </form>
         </div>
       </div>
