--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -235,7 +235,7 @@
           <br>
           <form action="index.html" method="post">
             <input type="email" name="email" class="text-input contact-input" placeholder="Your email address...">
-            <textarea name="message" cols="30" rows="10" class="text-input contact-input"></textarea>
+            <textarea name="message" class="text-input contact-input"></textarea>
           </form>
         </div>
       </div>
