--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -236,6 +236,7 @@
           <form action="index.html" method="post">
             <input type="email" name="email" class="text-input contact-input" placeholder="Your email address...">
             <textarea name="message" class="text-input contact-input" placeholder="Your message..."></textarea>
+            <button type="submit" class="btn btn-big"></button>
           </form>
         </div>
       </div>
