--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -236,7 +236,10 @@
           <form action="index.html" method="post">
             <input type="email" name="email" class="text-input contact-input" placeholder="Your email address...">
             <textarea name="message" class="text-input contact-input" placeholder="Your message..."></textarea>
-            <button type="submit" class="btn btn-big"></button>
+            <button type="submit" class="btn btn-big">
+              <i class="fas fa-envelop"></i>
+              Send
+            </button>
           </form>
         </div>
       </div>
