--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -237,7 +237,7 @@
             <input type="email" name="email" class="text-input contact-input" placeholder="Your email address...">
             <textarea name="message" class="text-input contact-input" placeholder="Your message..."></textarea>
             <button type="submit" class="btn btn-big">
-              <i class="fas fa-envelop"></i>
+              <i class="fas fa-envelope"></i>
               Send
             </button>
           </form>
