--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -208,14 +208,14 @@
             <span><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:blog@matelab.com.ar">blog@matelab.com.ar</a></span>
           </div>
           <div class="socials">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-medium"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-gitlab"></i></a>
+            <a href="https://www.facebook.com/MateLab.ok" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/matelabtech" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/matelab.ok" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://ar.linkedin.com/company/mate-lab" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://medium.com/@matelab" target="_blank"><i class="fab fa-medium"></i></a>
+            <a href="https://www.youtube.com/channel/UCVeIN8OqiORP0dGXNMqpUPQ" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://github.com/matelab" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://gitlab.com/matelab" target="_blank"><i class="fab fa-gitlab"></i></a>
           </div>
         </div>
         <div class="footer-section links">
