--- a/mateBlog/post.html
+++ b/mateBlog/post.html
@@ -10,6 +10,7 @@
 
     <!-- Custom Styling -->
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/post.css">
 
     <title>Mate Blog - Single Post</title>
   </head>
