--- a/mateBlog/post.html
+++ b/mateBlog/post.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Calling the header component -->
-    <div id="incluideHeader"></div>
+    <div id="includeHeader"></div>
 
     <!-- Page Wrapper for the whole website -->
     <div class="page-wrapper">
