--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -14,30 +14,8 @@
     <title>Mate Blog - Start</title>
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <h1 class="logo-text"><span>mate</span>Blog</span></h1>
-      </div>
-      <i class="fas fa-bars menu-toggle"></i>
-      <ul class="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Acerca</a></li>
-        <li><a href="#">Contacto</a></li>
-        <!--<li><a href="#">Registrate</a></li>
-        <li><a href="#">Login</a></li>-->
-        <li>
-          <a href="#">
-            <i class="fas fa-user"></i>
-            &nbsp;Acceso&nbsp;
-            <i class="fas fa-chevron-down"></i>
-          </a>
-          <ul>
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#" class="logout">Logout</a></li>
-          </ul>
-        </li>
-      </ul>
-    </header>
+    <!-- Calling the header component -->
+    <div id="includeHeader"></div>
 
     <!-- Page Wrapper for the whole website -->
     <div class="page-wrapper">
@@ -193,63 +171,8 @@
     </div>
     <!-- End Page Wrapper -->
 
-    <!-- Footer -->
-
-    <div class="footer">
-      <div class="footer-content">
-        <div class="footer-section about">
-
-          <h1 class="logo-text"><span>mate</span>Blog</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam commodi neque repudiandae dolores officia cum quod facere nesciunt tenetur, quam rem vitae tempora sapiente placeat vero. Culpa repellendus aliquam mollitia.
-          </p>
-          <div class="contact">
-            <span><i class="fas fa-phone"></i> &nbsp; +54 9 11 2180 5256</span>
-            <span><i class="fas fa-envelope"></i> &nbsp; <a href="mailto:blog@matelab.com.ar">blog@matelab.com.ar</a></span>
-          </div>
-          <div class="socials">
-            <a href="https://www.facebook.com/MateLab.ok" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://twitter.com/matelabtech" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/matelab.ok" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://ar.linkedin.com/company/mate-lab" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://medium.com/@matelab" target="_blank"><i class="fab fa-medium"></i></a>
-            <a href="https://www.youtube.com/channel/UCVeIN8OqiORP0dGXNMqpUPQ" target="_blank"><i class="fab fa-youtube"></i></a>
-            <a href="https://github.com/matelab" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://gitlab.com/matelab" target="_blank"><i class="fab fa-gitlab"></i></a>
-          </div>
-        </div>
-        <div class="footer-section links">
-          <h2>Quick Links</h2>
-          <br>
-          <ul>
-            <li><a href="#">Test Quick Link</a></li>
-            <li><a href="#">Test Quick Link</a></li>
-            <li><a href="#">Test Quick Link</a></li>
-            <li><a href="#">Test Quick Link</a></li>
-            <li><a href="#">Test Quick Link</a></li>
-            <li><a href="#">Test Quick Link</a></li>
-          </ul>
-        </div>
-        <div class="footer-section contact-form">
-          <h2>Contact us</h2>
-          <br>
-          <form action="index.html" method="post">
-            <input type="email" name="email" class="text-input contact-input" placeholder="Your email address...">
-            <textarea rows="4" name="message" class="text-input contact-input" placeholder="Your message..."></textarea>
-            <button type="submit" class="btn btn-big contact-btn">
-              <i class="fas fa-envelope"></i>
-              Send
-            </button>
-          </form>
-        </div>
-      </div>
-
-      <div class="footer-bottom">
-        &copy; Matelab 2021 | Designed & Powered by <a href="https://matelab.com.ar" target="_blank">Matelab</a>
-      </div>
-    </div>
-
-    <!-- End footer -->
+    <!-- Calling the footer component -->
+    <div id="includeFooter"></div>
 
     <!-- ================== SCRIPTS ================== -->
 
@@ -259,7 +182,8 @@
     crossorigin="anonymous"></script>
 
     <!-- Custom Script -->
-    <script src="./js/script.js"></script>
+    <script type="text/javascript" src="./js/script.js"></script>
+    <script type="text/javascript" src="./js/components.js"></script>
 
     <!-- Slick slider -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
