--- a/mateBlog/index.html
+++ b/mateBlog/index.html
@@ -11,6 +11,7 @@
     <!-- Custom Styling -->
     <link rel="stylesheet" href="./css/style.css">
 
+    <!-- Title -->
     <title>Mate Blog - Start</title>
   </head>
   <body>
