--- a/mateBlog/post.html
+++ b/mateBlog/post.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/post.css">
 
+    <!-- Title -->
     <title>Mate Blog - Single Post</title>
   </head>
   <body>
