--- a/mateBlog/post.html
+++ b/mateBlog/post.html
@@ -32,7 +32,7 @@
         <!--End Main content -->
       
         <!-- Sidebar section -->
-        <div class="sidebar">
+        <div class="sidebar single">
 
           <div class="section topics">
             <h2 class="section-title">Topics</h2>
