--- a/mateBlog/post.html
+++ b/mateBlog/post.html
@@ -59,6 +59,8 @@
         <!-- Sidebar section -->
         <div class="sidebar single">
 
+          <div class="section popular"></div>
+
           <div class="section topics">
             <h2 class="section-title">Topics</h2>
             <ul>
