Single post page

--- a/mateBlog/post.html
+++ b/mateBlog/post.html
@@ -59,8 +59,14 @@
         <!-- Sidebar section -->
         <div class="sidebar single">
 
-          <div class="section popular"></div>
+          <!-- Section popular topics-->
+          <div class="section popular">
 
+            <h2 class="section-title">Popular</h2>
+
+          </div>
+
+          <!-- Section topics -->
           <div class="section topics">
             <h2 class="section-title">Topics</h2>
             <ul>
