Single post page

--- a/mateBlog/post.html
+++ b/mateBlog/post.html
@@ -66,23 +66,19 @@
 
             <div class="post clearfix">
               <img src="./images/image_1.png" alt="">
-              <a href="#">Test title for popular post</a>
-            </div>
-            <div class="post clearfix">
-              <img src="./images/image_1.png" alt="">
-              <a href="#">Test title for popular post</a>
-            </div>
-            <div class="post clearfix">
-              <img src="./images/image_1.png" alt="">
-              <a href="#">Test title for popular post</a>
-            </div>
-            <div class="post clearfix">
-              <img src="./images/image_1.png" alt="">
-              <a href="#">Test title for popular post</a>
-            </div>
-            <div class="post clearfix">
-              <img src="./images/image_1.png" alt="">
-              <a href="#">Test title for popular post</a>
+              <a href="#"><h4></h4>Test title for popular post</h4></a>
+            </div><div class="post clearfix">
+              <img src="./images/image_2.png" alt="">
+              <a href="#"><h4></h4>Test title for popular post</h4></a>
+            </div><div class="post clearfix">
+              <img src="./images/image_3.png" alt="">
+              <a href="#"><h4></h4>Test title for popular post</h4></a>
+            </div><div class="post clearfix">
+              <img src="./images/image_4.png" alt="">
+              <a href="#"><h4></h4>Test title for popular post</h4></a>
+            </div><div class="post clearfix">
+              <img src="./images/image_5.png" alt="">
+              <a href="#"><h4></h4>Test title for popular post</h4></a>
             </div>
 
           </div>
