Single blog post page

--- a/mateBlog/post.html
+++ b/mateBlog/post.html
@@ -16,6 +16,10 @@
     <title>Mate Blog - Single Post</title>
   </head>
   <body>
+    <!-- Facebook page embed -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v10.0" nonce="XzaJQzly"></script>
+
     <!-- Calling the header component -->
     <div id="includeHeader"></div>
 
