--- a/mateBlog/post.html
+++ b/mateBlog/post.html
@@ -64,8 +64,10 @@
         <div class="sidebar single">
 
           <!-- Facebook page embed-->
-          <div class="fb-page" data-href="https://www.facebook.com/MateLab.ok/" data-tabs="" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-          <blockquote cite="https://www.facebook.com/MateLab.ok/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/MateLab.ok/">MateLab</a></blockquote>
+          <div class="fb-page" data-href="https://www.facebook.com/MateLab.ok/" data-tabs="" data-width="" data-height="" 
+            data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+              <blockquote cite="https://www.facebook.com/MateLab.ok/" class="fb-xfbml-parse-ignore">
+              <a href="https://www.facebook.com/MateLab.ok/">MateLab</a></blockquote>
           </div>
 
           <!-- Section popular topics-->
