--- a/mateBlog/register.html
+++ b/mateBlog/register.html
@@ -13,13 +13,19 @@
     <link rel="stylesheet" href="./css/post.css">
 
     <!-- Title -->
-    <title>Mate Blog - Register</title>
+    <title>Mate Blog - Single Post</title>
   </head>
   <body>
     <!-- Calling the header component -->
     <div id="includeHeader"></div>
 
-    
+    <!-- Page Wrapper for the whole website -->
+    <div class="page-wrapper">
+
+     
+
+    </div>
+    <!-- End Page Wrapper -->
 
     <!-- Calling the footer component -->
     <div id="includeFooter"></div>
