--- a/mateBlog/register.html
+++ b/mateBlog/register.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/post.css">
 
     <!-- Title -->
-    <title>Mate Blog - Single Post</title>
+    <title>Mate Blog - Register</title>
   </head>
   <body>
     <!-- Calling the header component -->
