--- a/mateBlog/register.html
+++ b/mateBlog/register.html
@@ -18,6 +18,7 @@
     <!-- Calling the header component -->
     <div id="includeHeader"></div>
 
+    <div class="auth-content"></div>
 
     <!-- ================== SCRIPTS ================== -->
 
