--- a/mateBlog/register.html
+++ b/mateBlog/register.html
@@ -18,7 +18,11 @@
     <!-- Calling the header component -->
     <div id="includeHeader"></div>
 
-    <div class="auth-content"></div>
+    <!-- Register form -->
+    <div class="auth-content">
+
+
+    </div>
 
     <!-- ================== SCRIPTS ================== -->
 
