--- a/mateBlog/register.html
+++ b/mateBlog/register.html
@@ -21,6 +21,9 @@
     <!-- Register form -->
     <div class="auth-content">
 
+        <form action="register.html" method="post">
+            <h2 class="form-title">Registrate</h2>
+        </form>
 
     </div>
 
