Username - register form

--- a/mateBlog/register.html
+++ b/mateBlog/register.html
@@ -23,6 +23,12 @@
 
         <form action="register.html" method="post">
             <h2 class="form-title">Registrate</h2>
+
+            <div>
+              <label>Usuario</label>
+              <input type="text" name="username" class="text-input">
+            </div>
+
         </form>
 
     </div>
