Email - register form

--- a/mateBlog/register.html
+++ b/mateBlog/register.html
@@ -28,6 +28,10 @@
               <label>Usuario</label>
               <input type="text" name="username" class="text-input">
             </div>
+            <div>
+              <label>E-mail</label>
+              <input type="email" name="email" class="text-input">
+            </div>
 
         </form>
 
