--- a/mateBlog/register.html
+++ b/mateBlog/register.html
@@ -32,7 +32,10 @@
               <label>E-mail</label>
               <input type="email" name="email" class="text-input">
             </div>
-
+            <div>
+              <label>Password</label>
+              <input type="password" name="password" class="text-input">
+            </div>
         </form>
 
     </div>
